[package]
name = "zero-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24" }
itertools = "0.10.5"
libm = "0.2.5"
rayon = "1.5.3"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
