[package]
name = "forgery-detection-zero"
version = "0.1.0"
description = "JPEG grid detector applied to forgery detection in digital images"
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.63"
categories = ["multimedia::images"]
keywords = ["forgery detection", "image processing"]
readme = "README.md"

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
image = { version = "0.24" }
itertools = "0.10"
libm = "0.2.5"
rayon = { version = "1.5", optional = true }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
