[package]
name = "forgery-detection-zero"
version = "0.2.0"
description = "JPEG grid detector applied to forgery detection in digital images"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ronnychevalier/forgery-detection-zero"
documentation = "https://docs.rs/forgery-detection-zero/"
edition = "2021"
rust-version = "1.63"
categories = ["multimedia::images", "science"]
keywords = ["forgery-detection", "image-processing", "image-forensics", "jpeg"]
readme = "README.md"

[features]
default = ["rayon", "image"]
rayon = ["dep:rayon"]
image = ["dep:image"]

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
image = { version = "0.24", optional = true }
itertools = "0.10"
libm = "0.2.5"
rayon = { version = "1.5", optional = true }
thiserror = "1"
jpeg-encoder = { version = "0.5", features = ["simd"] }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true

[profile.dev]
opt-level = 2
